<resources>
    <string name="app_name">Twitlet</string>
    <string name="content_description">Content Description</string>
    <string name="app_subtitle">Share your thoughts</string>

    <string name="label_positive_button">OK</string>
    <string name="label_cancel_button">Cancel</string>
    <string name="label_post_add_photo">Add Photo</string>
    <string name="label_post_button">Post</string>
    <string name="label_logout_button">Yes, log me out</string>
    <string name="label_delete_button">Delete</string>

    <!-- Login screen -->
    <string name="label_login_name">Email</string>
    <string name="label_login_pass">Password</string>
    <string name="label_login_new_account">Create a new account</string>
    <string name="label_login_button">Login</string>
    <string name="label_login_registered">Login now</string>
    <string name="label_login_sign_up">Sign up</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_pass_min">Must be at least 6 characters</string>
    <string name="signup_successful_title">Registration successful</string>
    <string name="signup_verify_rationale">A message was sent to your email. Please verify and login afterwards.</string>
    <string name="progress_login_register">Registering account…</string>
    <string name="progress_login_authenticate">Logging in…</string>

    <!-- Profile -->
    <string name="profile_label_setup">Setup your profile!</string>
    <string name="profile_label_nickname">Nickname</string>
    <string name="profile_label_save">Create Profile</string>
    <string name="profile_label_picture">Profile Image</string>
    <string name="profile_save_progress">Creating profile…</string>

    <!-- Menu -->
    <string name="menu_post">Post</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_license">License</string>

    <string name="message_copyright">Copyright 2018 Tompee. All rights reserved.</string>
    <string name="message_version">Version %1$s</string>
    <string name="message_license">Open Source License</string>
    <string name="message_post">Share your thoughts here</string>
    <string name="message_logout">Are you sure you want to logout?</string>
    <string name="message_delete">Are you sure you want to delete this message?</string>
    <string name="message_storage_rationale">This permission is required to read internally saved photos for upload.</string>
    <string name="message_post_progress">Uploading post...</string>

    <string name="label_about">About</string>
    <string name="label_license">License</string>
    <string name="label_post">Create Post</string>
    <string name="label_timeline">Timeline</string>
    <string name="label_logout">Logout</string>
    <string name="label_delete">Delete message</string>
    <string name="label_post_detail">Post</string>

</resources>
